--- a/configs/imagenet-21k_pt_dino.yaml
+++ b/configs/imagenet-21k_pt_dino.yaml
@@ -1,12 +1,12 @@
 teacher:
-  name: dinov2_vitl14
-  checkpoint: "/scratch/gilbreth/pjajal/dinov2_vitl14_pretrain.pth"
+  name: dinov2_vitb14
+  checkpoint: "/scratch/gilbreth/pjajal/dinov2_vitb14_pretrain.pth"
 
 student:
-  name: compvitl14
-  checkpoint: ""
+  name: compvitb14
+  # checkpoint: ""
   # checkpoint: "/scratch/gilbreth/pjajal/dinov2_vitl14_pretrain.pth"
-  # checkpoint: "/scratch/gilbreth/pjajal/checkpoints-again/distill_2024-03-13-100949/best_performing.pth"
+  checkpoint: "/scratch/gilbreth/pjajal/checkpoints-again/distill_2024-03-20-183732/best_performing.pth"
   # checkpoint: "/scratch/gilbreth/pjajal/checkpoints/mae_2024-03-10-170301/best_performing.pth"
   decoder_checkpoint: ""
 
@@ -18,7 +18,7 @@ hyperparameters:
   batch_size: 256
   num_workers: 32
   epochs: 300
-  mixup_alpha: 0.8 
+  mixup_alpha: 1.0 
   accumulations: 8
   in_memory: False
   gradient_clip_val: 0.5
