Add mixup_classes hyperparameter and fix GaussianBlur in imagenet21k dataset initialization

--- a/configs/imagenet-21k_pt_dino.yaml
+++ b/configs/imagenet-21k_pt_dino.yaml
@@ -19,6 +19,7 @@ hyperparameters:
   num_workers: 32
   epochs: 300
   mixup_alpha: 1.0 
+  mixup_classes: 10450
   accumulations: 8
   in_memory: False
   gradient_clip_val: 0.5
