--- a/compvit/configs/compvit_dinov2.yaml
+++ b/compvit/configs/compvit_dinov2.yaml
@@ -17,7 +17,7 @@ compvits14:
   num_patches: 256
   num_compressed_tokens: 16
   bottleneck: "conv_bottleneck"
-  bottleneck_locs: [5, 6]
+  bottleneck_loc: 5
   bottleneck_size: 1
 
 
@@ -40,7 +40,7 @@ compvitb14:
   num_patches: 256
   num_compressed_tokens: 32
   bottleneck: "conv_bottleneck"
-  bottleneck_locs: [5, 6]
+  bottleneck_loc: 5
   bottleneck_size: 3
 
 
@@ -64,7 +64,7 @@ compvitl14:
   num_patches: 256
   num_compressed_tokens: 8
   bottleneck: "conv_bottleneck"
-  bottleneck_locs: [5, 6]
+  bottleneck_loc: 5
   bottleneck_size: 3
 
 
@@ -87,7 +87,7 @@ compvitg14:
   num_patches: 256
   num_compressed_tokens: 16
   bottleneck: "conv_bottleneck"
-  bottleneck_locs: [10, 11]
+  bottleneck_loc: 10
   bottleneck_size: 3
 
 
